--- a/cafeandmenu.html
+++ b/cafeandmenu.html
@@ -32,14 +32,14 @@
 
     <!-- Coffee Items -->
     <div class="menu-card">
-      <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93" alt="Cappuccino">
+      <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?w=400&h=300&fit=crop" alt="Cappuccino">
       <h3>Cappuccino</h3>
       <p>Rich espresso with steamed milk and frothy foam.</p>
       <p class="price">R35</p>
     </div>
 
     <div class="menu-card">
-      <img src="https://images.unsplash.com/photo-1522184216313-5f392bd7d541" alt="Latte">
+      <img src="https://images.unsplash.com/photo-1522184216313-5f392bd7d541?w=400&h=300&fit=crop" alt="Latte">
       <h3>Latte</h3>
       <p>Smooth espresso with a creamy layer of milk foam.</p>
       <p class="price">R32</p>
@@ -47,21 +47,21 @@
 
     <!-- Bakery Items -->
     <div class="menu-card">
-      <img src="https://images.unsplash.com/photo-1601924582975-0545c1e75e86" alt="Croissant">
+      <img src="https://images.unsplash.com/photo-1601924582975-0545c1e75e86?w=400&h=300&fit=crop" alt="Croissant">
       <h3>Butter Croissant</h3>
       <p>Flaky, buttery pastry baked fresh daily.</p>
       <p class="price">R25</p>
     </div>
 
     <div class="menu-card">
-      <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092" alt="Chocolate Muffin">
+      <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?w=400&h=300&fit=crop" alt="Chocolate Muffin">
       <h3>Chocolate Muffin</h3>
       <p>Moist and chocolatey muffin perfect with coffee.</p>
       <p class="price">R28</p>
     </div>
 
     <div class="menu-card">
-      <img src="https://images.unsplash.com/photo-1565958011702-44b2f28c641b" alt="Cheesecake">
+      <img src="https://images.unsplash.com/photo-1565958011702-44b2f28c641b?w=400&h=300&fit=crop" alt="Cheesecake">
       <h3>Classic Cheesecake</h3>
       <p>Creamy cheesecake topped with fresh berries.</p>
       <p class="price">R45</p>
@@ -75,7 +75,6 @@
 </footer>
 
 <script>
-  // Optional: simple hover effect using jQuery
   $(".menu-card").hover(
     function() { $(this).css("transform","scale(1.05)"); },
     function() { $(this).css("transform","scale(1)"); }
