--- a/events.html
+++ b/events.html
@@ -3,65 +3,70 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simply Revived | Events</title>
+  <title>Events | Simply Revived</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
+
 <body>
 
-  <!-- Header -->
-  <header>
+<header>
     <h1>Simply Revived</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="booksandcollections.html">Books</a></li>
         <li><a href="cafeandmenu.html">Coffee & Bakery</a></li>
-        <li><a href="events.html" class="active">Events</a></li>
+        <li><a class="active" href="events.html">Events</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-  </header>
+</header>
 
-  <!-- Events Section -->
-  <section id="events">
-    <h2>Upcoming Events</h2>
-    <p>Join us for exciting community gatherings, author signings, and book club sessions.</p>
+<section class="events-page">
+  <h2>Upcoming Events</h2>
+  <p>Join us for author signings, reading circles, and community gatherings at Simply Revived.</p>
 
-    <div class="event-grid">
+  <div class="events-grid">
 
-      <!-- Event Card -->
-      <div class="card">
-        <h3>📖 Book Launch: "Whispers in the Wind"</h3>
-        <p><strong>Date:</strong> 12 October 2025</p>
-        <p><strong>Time:</strong> 6:00 PM – 8:00 PM</p>
-        <p><strong>Location:</strong> Simply Revived Bookstore</p>
-        <p>Meet author David Brown as he introduces his latest novel and signs copies.</p>
-      </div>
-
-      <div class="card">
-        <h3>☕ Coffee & Conversations</h3>
-        <p><strong>Date:</strong> 20 October 2025</p>
-        <p><strong>Time:</strong> 10:00 AM – 12:00 PM</p>
-        <p><strong>Location:</strong> Cafe Corner, Simply Revived</p>
-        <p>A casual community event where readers share book recommendations over coffee.</p>
-      </div>
-
-      <div class="card">
-        <h3>👨‍👩‍👧 Storytime for Kids</h3>
-        <p><strong>Date:</strong> 5 November 2025</p>
-        <p><strong>Time:</strong> 3:00 PM – 4:00 PM</p>
-        <p><strong>Location:</strong> Children’s Section</p>
-        <p>A fun and interactive storytelling session for kids aged 4–10, featuring classic tales and new favorites.</p>
-      </div>
-
+    <!-- Event 1 -->
+    <div class="event-card">
+      <img src="https://images.unsplash.com/photo-1504198453319-5ce911bafcde?w=400&h=300&fit=crop" alt="Author Signing">
+      <h3>Author Signing: Jane Doe</h3>
+      <p>Date: 5 December 2025</p>
+      <p>Meet local author Jane Doe and get your favorite books signed.</p>
     </div>
-  </section>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Simply Revived. All Rights Reserved.</p>
-  </footer>
+    <!-- Event 2 -->
+    <div class="event-card">
+      <img src="https://images.unsplash.com/photo-1554774853-d10d3d28e1a0?w=400&h=300&fit=crop" alt="Reading Circle">
+      <h3>Monthly Reading Circle</h3>
+      <p>Date: 12 December 2025</p>
+      <p>Join fellow book lovers for discussions on our book of the month.</p>
+    </div>
+
+    <!-- Event 3 -->
+    <div class="event-card">
+      <img src="https://images.unsplash.com/photo-1515169067860-53858c5a7b48?w=400&h=300&fit=crop" alt="Children Storytime">
+      <h3>Children's Storytime</h3>
+      <p>Date: 19 December 2025</p>
+      <p>A fun reading session for kids with interactive storytelling and activities.</p>
+    </div>
+
+  </div>
+</section>
+
+<footer>
+  <p>&copy; 2025 Simply Revived. All Rights Reserved.</p>
+</footer>
+
+<script>
+  $(".event-card").hover(
+    function() { $(this).css("transform","scale(1.03)").css("box-shadow","0px 6px 14px rgba(0,0,0,0.2)"); },
+    function() { $(this).css("transform","scale(1)").css("box-shadow","none"); }
+  );
+</script>
 
 </body>
 </html>
